# politely

./: .gitignore  Aptfile  Dockerfile  Makefile  Procfile  README.md  app.json  config.yaml  main.py  main_demo.py  main_demo_contextual.py  main_deploy.py  main_streamlit.py  main_test.py  main_train.py  packages.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
.github/workflows/: python-app.yml  tests.yml
explore/: add_rules_eg_1.py  add_rules_eg_2.py  explore_abbreviations_to_df.py  explore_analyze.py  explore_build_df_out_of_zip.py  explore_candidates.py  explore_combine_kiwi_hgtk.py  explore_datasets_load_dataset_stylekqc.py  explore_difflib.py  explore_enum_names.py  explore_fetch_environs.py  explore_fetch_json.py  explore_from_dict_to_df.py  explore_functional_seq.py  explore_gensim_analyze_sentence.py  explore_gensim_phrases.py  explore_gensim_score_candidate.py  explore_gensim_word2vec.py  explore_gpt_scorer_eng.py  explore_gpt_scorer_kor.py  explore_gpt_scorer_kor_batch.py  explore_hgtk_ josa_attach.py  explore_hgtk_letter_compose.py  explore_hgtk_letter_decompose.py  explore_honorifier.py  explore_inspect.py  explore_itertools_product.py  explore_itertools_substrings.py  explore_khaii.py  explore_khaiii.py  explore_khaiii_dae.py  explore_khaiii_eat_honorifics.py  explore_khaiii_eiru.py  explore_khaiii_honorify.py  explore_khaiii_ida.py  explore_kiwi.py  explore_kiwi_ halgumhalgum.py  explore_kiwi_analyze.py  explore_kiwi_form_with_tags.py  explore_kiwi_honorify.py  (+60 more)
kps/: fetchers.py  processors.py
kps/resources/: honorifics.yaml
politely/: __init__.py  errors.py  explainer.py  fetchers.py  hangle.py  hangul.py  honorifics.yaml  modeling_gpt2_scorer.py  modeling_gpt_scorer.py  modeling_heuristic_scorer.py  modeling_scorer.py  paths.py  processors.py  rules.py  scorer.py  style.py  styler.py  stylers.py  translator.py
politely/resources/: rules.yaml  (+2 more)
politetune/: errors.py  fetchers.py  honorifier.py  lemmatizer.py  paths.py  processors.py  tuner.py  visualiser.py
tests/: test_honorifier.py  test_kiwi.py  test_styler.py  test_styler_real_data.py  test_tuner.py
(+10 files in other folders)
