[tool.poetry]
name = "politetune"
version = "0.1.0"
description = ""
authors = ["eubinecto <eubinecto>"]

[tool.poetry.dependencies]
python = "^3.9.10"
konlpy = "^0.6.0"
streamlit = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
