[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "politely"
description = 'A rule-based politeness styler for the Korean Language'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Eu-Bin KIM", email = "tlrndk123@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "cmake>=3.25.2",
  "kiwipiepy>=0.14.1",
  "transformers>=4.29.1",
  "torch>=2.0.1"
]

dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/politely#readme"
Issues = "https://github.com/unknown/politely/issues"
Source = "https://github.com/unknown/politely"

[tool.hatch.version]
path = "politely/__init__.py"

[tool.hatch.build]
ignore-vcs = true
include = [
  "politely/*.py",
  "politely/honorifics.yaml"
]

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = []
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=politely --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
